# CodeAlpha_BankingSystem

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
CodeAlpha_BankingSystem/: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.bridge  README.md
CodeAlpha_BankingSystem/include/: Account.h  Admin.h  Bank.h  Customer.h  Exceptions.h  Transaction.h  Utils.h
CodeAlpha_BankingSystem/src/: Account.cpp  Admin.cpp  Bank.cpp  Customer.cpp  Transaction.cpp  Utils.cpp  bridge.cpp  main.cpp
backend/: requirements.txt  test_analytics.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  expense_categorizer.py  fraud_detector.py  health_scorer.py  savings_recommender.py  spending_analyzer.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  account.py  analytics.py  customer.py  transaction.py
backend/app/routers/: accounts.py  admin.py  analytics.py  auth.py  customers.py  transactions.py
backend/app/schemas/: __init__.py  account.py  analytics.py  auth.py  customer.py  transaction.py
backend/app/services/: analytics_service.py  banking_service.py
database/: schema.sql  seed.sql
docs/: api-reference.md  architecture.md  resume-bullets.md  uml-diagrams.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/charts/: health-gauge.tsx  spending-chart.tsx
(+24 files in other folders)
